--- a/src/index.html
+++ b/src/index.html
@@ -3,17 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Hello World!</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,800&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="index.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css"
-    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,13 +19,18 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script src="test.js" defer></script>
   </head>
   <body class="d-flex flex-column" style="height: 100vh">
-    <header class="container-fluid border-bottom py-2">
+    <header class="container-fluid py-2 shadow-sm">
       <div class="row">
         <div class="col">
-          <img src="./assets/logo.svg" alt="" />
+          <img src="./assets/logo.svg" alt="" style="height: 3rem" />
         </div>
       </div>
     </header>
@@ -46,6 +41,7 @@
             class="col d-flex justify-content-center align-items-center position-relative"
           >
             <svg
+              style="max-height: 27rem; min-height: 20rem"
               class="timer-svg"
               viewBox="0 0 100 100"
               xmlns="http://www.w3.org/2000/svg"
@@ -55,7 +51,7 @@
                 <path
                   id="timer-base"
                   stroke-dasharray="283"
-                  class="timer-base ${remainingPathColor}"
+                  class="timer-base"
                   d="
                   M 50, 50
                   m -40, 0
@@ -65,20 +61,47 @@
                 ></path>
               </g>
             </svg>
-
-            <h2 class="position-absolute translate-middle top-50 start-50">
-              00:00
-            </h2>
-          </div>
-          <div class="col d-flex flex-column align-items-center">
-            <div class="d-flex flex-column">
-              <h1>time elapsed</h1>
-              <h1 class="display-1 fw-bold">00:00:00</h1>
+            <div
+              class="d-flex flex-column text-center position-absolute translate-middle top-50 start-50"
+            >
+              <p
+                class="display-3 fw-normal mb-1 lh-1 text-yellow"
+                id="txt-break-time"
+              >
+                20:00
+              </p>
+              <p class="fs-4 lh-1 text-gray">next break</p>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
-              <button class="btn bg-yellow px-3 fw-bold">start</button>
-              <i class="bi bi-pause-fill text-yellow btn-icon"></i>
-              <i class="bi bi-play-fill text-yellow btn-icon"></i>
+          </div>
+          <div
+            class="d-none d-md-flex col d-flex flex-column align-items-center justify-content-center"
+          >
+            <div class="d-flex flex-column">
+              <p class="mb-0 lh-1 fs-3">time elapsed</p>
+              <h1
+                class="display-1 fw-bold lh-1 text-gray"
+                style="font-size: 7rem"
+                id="txt-elapsed-time"
+              >
+                99:59:55
+              </h1>
+            </div>
+            <div
+              class="d-flex align-items-center justify-content-center mt-3"
+              id="section-right"
+            >
+              <button
+                class="text-gray btn bg-yellow px-5 pt-1 fw-bold fs-3 me-2"
+                id="btn-start-timer"
+              >
+                start
+              </button>
+              <i
+                class="bi bi-pause-fill text-yellow btn-icon display-1 lh-1"
+              ></i>
+              <i
+                class="d-none bi bi-play-fill text-yellow btn-icon display-1 lh-1"
+              ></i>
             </div>
           </div>
         </div>
