Add desktop notifications

--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,12 @@
       <img src="./assets/logo.svg" alt="" style="height: 2rem" />
       <!-- <i class="bi bi-sun-fill ms-auto mb-0 me-3 fs-2 text-yellow"></i> -->
       <i class="bi bi-moon-stars-fill ms-auto mb-0 me-4 fs-3 text-gray"></i>
-      <i class="bi bi-three-dots mb-0 me-3 fs-3 text-gray"></i>
+      <i
+        class="bi bi-three-dots mb-0 me-3 fs-3 text-gray"
+        id="btn-settings"
+      ></i>
     </header>
+
     <main class="d-flex align-items-center" style="height: 100%">
       <div class="container" style="max-width: 1000px !important">
         <div class="row justify-content-center">
@@ -134,6 +138,7 @@
         </div>
       </div>
     </main>
+
     <!-- <footer
       class="bg-yellow-light d-flex align-items-center px-2 text-gray"
       style="height: 3rem"
