Add settings window

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <script src="timer.js" defer></script>
+    <script src="renderer.js" defer></script>
   </head>
   <body class="d-flex flex-column bg-white" style="height: 100vh">
     <header
@@ -34,10 +34,7 @@
       <img src="./assets/logo.svg" alt="" style="height: 2rem" />
       <!-- <i class="bi bi-sun-fill ms-auto mb-0 me-3 fs-2 text-yellow"></i> -->
       <i class="bi bi-moon-stars-fill ms-auto mb-0 me-4 fs-3 text-gray"></i>
-      <i
-        class="bi bi-three-dots mb-0 me-3 fs-3 text-gray"
-        id="btn-settings"
-      ></i>
+      <i class="bi bi-gear-fill mb-0 me-3 fs-2 text-gray" id="btn-settings"></i>
     </header>
 
     <main class="d-flex align-items-center" style="height: 100%">
