--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>twenty twenty</title>
     <link rel="stylesheet" href="index.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -26,14 +26,22 @@
     ></script>
     <script src="renderer.js" defer></script>
   </head>
-  <body class="d-flex flex-column bg-white" style="height: 100vh">
+  <body
+    class="d-flex flex-column bg-white"
+    style="height: 100vh"
+    id="body-index"
+  >
     <header
       class="container-fluid py-2 shadow-sm d-flex align-items-center px-3"
+      id="header-index"
     >
       <img src="./assets/icon.svg" alt="" style="height: 2rem" class="me-2" />
-      <img src="./assets/logo.svg" alt="" style="height: 2rem" />
+      <img src="./assets/logo.svg" alt="" style="height: 2rem" id="logo" />
       <!-- <i class="bi bi-sun-fill ms-auto mb-0 me-3 fs-2 text-yellow"></i> -->
-      <i class="bi bi-moon-stars-fill ms-auto mb-0 me-4 fs-3 text-gray"></i>
+      <i
+        class="bi bi-moon-stars-fill ms-auto mb-0 me-4 fs-3 text-gray"
+        id="btn-darkmode"
+      ></i>
       <i class="bi bi-gear-fill mb-0 me-3 fs-2 text-gray" id="btn-settings"></i>
     </header>
 
@@ -107,7 +115,7 @@
             class="d-none d-lg-flex col d-flex flex-column align-items-center justify-content-center"
           >
             <div class="d-flex flex-column">
-              <p class="mb-0 lh-1 fs-3">time elapsed</p>
+              <p class="mb-0 lh-1 fs-3 text-gray">time elapsed</p>
               <h1
                 class="display-1 fw-bold lh-1 text-gray"
                 style="font-size: 7rem"
