--- a/src/settings.html
+++ b/src/settings.html
@@ -28,8 +28,11 @@
     ></script>
     <script src="renderer.js" defer></script>
   </head>
-  <body class="bg-white" id="body-settings">
-    <main class="my-5 overflow-hidden">
+  <body class="bg-white position-relative" id="body-settings">
+    <header class="" style="height: 3rem !important; margin-bottom: -2.5rem">
+      <div class="opacity-0">header</div>
+    </header>
+    <main class="my-5 overflow-hidden pb-1">
       <div class="row px-5 px-lg-0 justify-content-center">
         <div class="col-lg-8 d-flex flex-column gap-4">
           <div class="d-flex align-items-center mb-3 mb-md-5">
