--- a/src/index.html
+++ b/src/index.html
@@ -4,27 +4,14 @@
     <meta charset="UTF-8" />
     <title>twenty twenty</title>
     <link rel="stylesheet" href="index.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="./dependencies/bootstrap/css/bootstrap.css" />
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+      href="./dependencies/bootstrap-icons/bootstrap-icons.css"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script>
-    <script src="renderer.js" defer></script>
+    <script src="./dependencies/bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="./dependencies/jquery/jquery-3.6.0.min.js"></script>
+    <script type="module" src="renderer.js" defer></script>
   </head>
   <body
     class="d-flex flex-column bg-white position-relative"
@@ -35,7 +22,7 @@
       class="container-fluid shadow-sm row align-items-center px-0 mx-0 position-fixed"
       id="header-index"
     >
-      <div class="col px-2 d-flex align-items-center" id="header-clickable">
+      <div class="col px-2 d-flex align-items-center">
         <img
           src="./assets/icon.svg"
           alt=""
