Move darkmode to settings, Add systemdefault theme

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
     </header>
 
     <div
-      class="d-flex flex-column flex-sm-row-reverse position-absolute end-0 align-items-center gap-2 gap-sm-4 mx-4 mx-md-5 mt-3"
+      class="d-flex flex-column position-absolute end-0 align-items-center gap-2 gap-sm-4 mx-4 mx-md-5 mt-3"
       style="z-index: 5"
       id="options"
     >
@@ -58,13 +58,6 @@
         data-bs-toggle="tooltip"
         data-bs-placement="left"
         title="Settings"
-      ></i>
-      <i
-        class="bi bi-moon-stars-fill fs-2 text-gray"
-        id="btn-darkmode"
-        data-bs-toggle="tooltip"
-        data-bs-placement="left"
-        title="Toggle Darkmode"
       ></i>
     </div>
 
@@ -126,7 +119,7 @@
                 id="controls-break-timer"
               >
                 <i
-                  class="bi bi-play-fill text-yellow display-1 my-0 lh-1"
+                  class="bi bi-play-fill text-yellow display-1 my-0 lh-1 ms-1"
                   id="btn-start-timer"
                 ></i>
                 <i
@@ -155,7 +148,7 @@
               id="section-right"
             >
               <button
-                class="text-gray btn bg-yellow px-5 pt-1 fw-bold fs-3 me-2"
+                class="btn bg-yellow px-5 pt-1 fw-bold fs-3 me-2"
                 id="btn-start-timer2"
               >
                 start
