--- a/src/settings.html
+++ b/src/settings.html
@@ -28,11 +28,11 @@
     ></script>
     <script src="renderer.js" defer></script>
   </head>
-  <body class="bg-white position-relative" id="body-settings">
+  <body class="bg-dark position-relative dark-mode" id="body-settings">
     <header class="" style="height: 3rem !important; margin-bottom: -2.5rem">
       <div class="opacity-0">header</div>
     </header>
-    <main class="my-5 overflow-hidden pb-1">
+    <main class="my-3 overflow-hidden pb-1">
       <div class="row px-5 px-lg-0 justify-content-center">
         <div class="col-lg-8 d-flex flex-column gap-4">
           <div class="d-flex align-items-center mb-3 mb-md-5">
@@ -75,8 +75,8 @@
               >Auto start timer when app is launched</label
             >
           </div>
-          <div class="d-flex align-items-center">
-            <label class="form-label" for="flexSwitchCheckDefault"
+          <div class="d-flex align-items-center dropdown">
+            <label class="form-label" for="prefs-breakTimeInterval"
               >Modify break-time interval</label
             >
             <select
@@ -92,6 +92,22 @@
               <option value="40">Every 40 minutes</option>
               <option value="50">Every 50 minutes</option>
               <option value="60">Every hour</option>
+            </select>
+          </div>
+          <div class="d-flex align-items-center">
+            <label class="form-label" for="prefs-appTheme"
+              >Application theme</label
+            >
+            <select
+              class="form-select ms-auto mt-0"
+              style="max-width: 12rem"
+              aria-label="Default select example"
+              value="system"
+              id="prefs-appTheme"
+            >
+              <option selected value="system">System default</option>
+              <option value="dark">Dark theme</option>
+              <option value="light">Light theme</option>
             </select>
           </div>
         </div>
