Create own separate script for each browser window

--- a/src/settings.html
+++ b/src/settings.html
@@ -6,11 +6,11 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src data: *"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src data:"
     />
     <meta
       http-equiv="X-Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src data: *"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src data:"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Settings</title>
@@ -22,7 +22,7 @@
     />
     <script src="./dependencies/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="./dependencies/jquery/jquery-3.6.0.min.js"></script>
-    <script src="renderer.js" defer></script>
+    <script src="settings.js" defer></script>
   </head>
   <body class="bg-dark position-relative dark-mode" id="body-settings">
     <header class="" style="height: 3rem !important; margin-bottom: -2.5rem">
