Fix abrupt window appearance

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <script type="module" src="renderer.js" defer></script>
   </head>
   <body
-    class="d-flex flex-column bg-white position-relative"
+    class="d-flex flex-column bg-white"
     style="height: 100vh"
     id="body-index"
   >
