Add system tray menu, timer pause per break option

--- a/src/settings.html
+++ b/src/settings.html
@@ -71,6 +71,17 @@
               >Auto start timer when app is launched</label
             >
           </div>
+          <div class="form-check form-switch">
+            <input
+              class="form-check-input float-end"
+              type="checkbox"
+              role="switch"
+              id="prefs-pauseEveryBreak"
+            />
+            <label class="form-check-label" for="prefs-pauseEveryBreak"
+              >Pause timer every break</label
+            >
+          </div>
           <div class="d-flex align-items-center dropdown">
             <label class="form-label" for="prefs-breakTimeInterval"
               >Modify break-time interval</label
