Add window expand and collapse feature

--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,23 @@
       ></i>
     </div>
 
+    <div
+      class="position-fixed end-0 top-0 d-flex align-items-center"
+      id="section-expand"
+    >
+      <div class="position-relative h-100 w-100">
+        <i
+          class="d-lg-none bi bi-chevron-right position-absolute top-50 start-50 translate-middle"
+          id="section-control-expand"
+        ></i>
+        <i
+          class="d-none d-lg-block bi bi-chevron-left position-absolute top-50 start-50 translate-middle"
+          id="section-control-hide"
+        ></i>
+        <div class="position-absolute h-100 w-100 end-0"></div>
+      </div>
+    </div>
+
     <main
       class="d-flex align-items-center"
       style="height: 100%; margin-top: 2.5rem"
@@ -173,12 +190,5 @@
         </div>
       </div>
     </main>
-
-    <!-- <footer
-      class="bg-yellow-light d-flex align-items-center px-2 text-gray"
-      style="height: 3rem"
-    >
-      Footer text
-    </footer> -->
   </body>
 </html>
