Add option for notification sound, migrate to main process

--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
     style="height: 100vh"
     id="body-index"
   >
+    <audio id="sound-notification">
+      <source src="./assets/alarm.mp3" type="audio/mpeg" />
+    </audio>
     <header
       class="container-fluid shadow-sm row align-items-center px-0 mx-0 position-fixed"
       id="header-index"
